--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <java.version>1.8</java.version>
         <lombok.version>1.18.4</lombok.version>
         <mockito.version>2.23.4</mockito.version>
+        <apache.commons.lang.version>3.0</apache.commons.lang.version>
         <junit.version>4.12</junit.version>
         <maven.compiler.version>3.8.0</maven.compiler.version>
         <javax.servlet.version>3.0.1</javax.servlet.version>
@@ -46,8 +47,19 @@
                 <artifactId>mockito-core</artifactId>
                 <version>${mockito.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${apache.commons.lang.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+    </dependencies>
 
     <profiles>
         <profile>
